[package]
name = "loco"
version = "0.2.0"
authors = ["runner"]
edition = "2021"

[[bin]]
name = "loco"
path = "src/loco.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.7"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
dashmap = "5.4"
memmap2 = "0.7"
crossbeam = "0.8"
num_cpus = "1.16"
